[package]
name = "vesting"
version = "0.1.0"
edition = "2024"

[dependencies]
num-derive = "0.4.2"
num-traits = "0.2.19"
constant-product-curve = { git = "https://github.com/deanmlittle/constant-product-curve", version = "0.1.0" }
pinocchio = "0.9.2"
pinocchio-associated-token-account = "0.2.0"
pinocchio-system = "0.4.0"
pinocchio-token = "0.4.0"
thiserror = { version = "2.0", default-features = false }

[dev-dependencies]
litesvm = "0.9.0"
litesvm-token = "0.9.0"
solana-sdk = "3.0.0"
spl-associated-token-account = "8.0.0"
spl-token = "9.0.0"
agave-feature-set = "~3.1"

[lib]
crate-type = ["lib", "cdylib"]
